--- a/project_3/src/main/resources/in/co/rays/project_3/bundle/system.properties
+++ b/project_3/src/main/resources/in/co/rays/project_3/bundle/system.properties
@@ -32,6 +32,9 @@ smtp.port=465
 email.login=mnidhi2999@gmail.com
 email.pwd=mhdbzimpqhbirhbx
 
+jasper =D://Project_3_Workspace//project_3//src//main//webapp//jasper//MarksheetMeritList.jrxml
+
+
 
 #Pagination
 page.size=10
